tests/ui/dyn-compatibility/trait-alias-self-projection.stderr
error[E0411]: `Self` is not allowed in type aliases
  --> $DIR/trait-alias-self-projection.rs:3:19
   |
LL | type D = &'static dyn B;
   |                   ^^^^^ `Self` is only available in impls, traits, and concrete type definitions

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0411`.
